# Cpp_class_for_defining_a_point_in_3D_coordinate_systems

./: CMakeLists.txt  Makefile  README.md  build_and_run.sh  coordinate_systems  coordinates.cpp  coordinates.hpp  main.cpp  εκφώνηση.md  εκφώνηση.txt
